2007-08-24  Pavel Tsekov  <ptsekov@gmx.net>

	* screen.c (show_dir): Remove unneeded code.

2007-08-23  Pavel Tsekov  <ptsekov@gmx.net>

	* filegui.c (rd_widgets) [_LARGE_FILES]: Use format string
	capable of supporting 64 bit file sizes.

2007-08-23  Pavel Tsekov  <ptsekov@gmx.net>

	* mountlist.c (fstype_to_string): Define only when
	`MOUNTED_GETMNTINFO' or `MOUNTED_VMOUNT' is defined.

2007-05-02  Pavel Tsekov  <ptsekov@gmx.net>

	* cmd.c (dirsizes_cmd): Re-sort the panel when done.

2007-03-23  Pavel Tsekov  <ptsekov@gmx.net>

	* subshell.c (subshell_name_quote): Use the `printf' utility
	instead of `echo' to quote the directory name.

2007-03-08  Pavel Tsekov  <ptsekov@gmx.net>

	* subshell.c (sigchld_handler) [__EMX__]: Remove unneeded code.

2007-03-01  Pavel Tsekov  <ptsekov@gmx.net>

	* subshell.c (subshell_pty_slave): New global variable.
	(init_subshell): Do not close the pseudo-terminal slave - 
	store it in `subshell_pty_slave' for later use.
	(init_subshell_child): Do not open the pseudo-terminal slave
	in the child. It is inherited from the parent now.
	Use `subshell_pty_slave' as the file descriptor of the
	opened pseudo-terminal slave.
	Rearrange the code a bit.
	(synchronize): Discard all data from the pseudo-terminal
	slave input queue.

2007-02-22  Pavel Tsekov  <ptsekov@gmx.net>

	* file.c (copy_file_file): chmod() the target file no matter whether
	"preserve attributes" is checked or not, since the destination is
	initially created with mode 0600.

2007-02-22  Pavel Tsekov  <ptsekov@gmx.net>

	* utilunix.c (mc_tmpdir): Do not accept relative path in TMPDIR. Use
	a hardcoded value instead.

2007-02-02  Pavel Roskin  <proski@gnu.org>

	* mountlist.c: Fix misuse of HAVE_STRUCT_STATFS_F_FSTYPENAME.

2007-01-20  Pavel Tsekov  <ptsekov@gmx.net>

	* help.c: Document the newline following the node header.
	Teach all code dealing with nodes that the actual node data
	starts right after the first newline following the node