@@ -1,5 +1,9 @@
 2007-08-24  Pavel Tsekov  <ptsekov@gmx.net>
 
+	* screen.c (show_dir): Surrond the current directory with spaces.
+
+2007-08-24  Pavel Tsekov  <ptsekov@gmx.net>
+
 	* screen.c (show_dir): Remove unneeded code.
 
 2007-08-23  Pavel Tsekov  <ptsekov@gmx.net>
